--- a/package.json
+++ b/package.json
@@ -47,7 +47,6 @@
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
-    "@nrwl/angular": "13.10.1",
     "dagre": "^0.8.5",
     "rxjs": "~7.4.0",
     "tslib": "^2.0.0",
@@ -68,6 +67,7 @@
     "@angular/cli": "~13.3.0",
     "@angular/compiler-cli": "~13.3.0",
     "@angular/language-service": "~13.3.0",
+    "@nrwl/angular": "13.10.1",
     "@nrwl/cli": "13.10.1",
     "@nrwl/cypress": "13.10.1",
     "@nrwl/eslint-plugin-nx": "13.10.1",
@@ -82,6 +82,8 @@
     "@types/resize-observer-browser": "^0.1.7",
     "@typescript-eslint/eslint-plugin": "~5.18.0",
     "@typescript-eslint/parser": "~5.18.0",
+    "@commitlint/cli": "^16.2.3",
+    "@commitlint/config-conventional": "^16.2.1",
     "cypress": "^9.1.0",
     "eslint": "~8.12.0",
     "eslint-config-prettier": "8.1.0",
