--- a/.github/workflows/quality-check.yaml
+++ b/.github/workflows/quality-check.yaml
@@ -49,7 +49,7 @@ jobs:
 
   test:
     if: "!contains(github.event.head_commit.message, 'skip ci')"
-    name: Test applications & libraries
+    name: Test Applications & Libraries
     runs-on: ubuntu-latest
     needs: [dependencies]
     steps:
@@ -76,7 +76,7 @@ jobs:
       matrix:
         language: [ 'javascript' ]
     steps:
-    - name: Checkout repository
+    - name: Checkout
       uses: actions/checkout@v3
     - name: Initialize CodeQL
       uses: github/codeql-action/init@v2
