--- a/package.json
+++ b/package.json
@@ -44,10 +44,10 @@
     "@angular/platform-browser-dynamic": "15.2.0",
     "dagre": "^0.8.5",
     "rxjs": "~7.8.0",
-    "tslib": "^2.5.0",
-    "zone.js": "~0.12.0"
+    "tslib": "^2.5.0"
   },
   "devDependencies": {
+    "zone.js": "~0.12.0",
     "@angular-devkit/build-angular": "15.2.0",
     "@angular-eslint/eslint-plugin": "15.2.1",
     "@angular-eslint/eslint-plugin-template": "15.2.1",
